istio/kube/net-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: im
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway
  namespace: im
spec:
  hosts:
    - "*"
  gateways:
    - im/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: gateway.im.svc.cluster.local
            port:
              number: 8888
