istio/kube/net-logic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: logic
spec:
  hosts:
    - gateway.im.srv.cluster.local
  http:
    - route:
        - destination:
            host: logic.im.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: logic
spec:
  host: logic.im.srv.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
